Grid snaps...problem calculating intersection points